[project]
name = "emergency_response"
version = "0.1.0"
description = "emergency_response using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0",
    "osmnx",
    "scikit-learn"
]

[project.scripts]
kickoff = "emergency_response.main:kickoff"
plot = "emergency_response.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
